# GenerativeAI-Agent-based-job-recommendation-system

./: constants.py  logger.py  main.py  pyproject.toml  requirements.txt  test_serper_api.py
Frontend/static/: script.js  style.css
Frontend/templates/: about.html  dashboard.html  forgot_password.html  login.html  reset_password.html  signup.html  verify_otp.html
src/: app.py
src/models/: ats_models.py  cv_models.py  job_models.py
src/services/: ats_service.py  document_service.py  ocr_service.py  search_service.py  skills_extraction.py  utils.py
src/services/prompts/: ats_score_prompt.py  extraction_prompt.py  jd_prompts.py  summarise_missing_items_prompts.py
src/utilities/: openai_llm_utils.py  skills_prompt.py  text_extractor.py
temp/: Sayli Thukral resume.docx
