[project]
name = "generativeai-agent-based-job-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.8",
    "jinja2>=3.1.6",
    "openai>=2.21.0",
    "path>=17.1.1",
    "pypdf>=6.7.3",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
]
